--- a/src/references.bib
+++ b/src/references.bib
@@ -130,3 +130,14 @@
   year          = {1995},
   copyright     = {Assumed arXiv.org perpetual,  non-exclusive license to distribute this article for submissions made before January 2004}
 }
+@inproceedings{shor,
+  series        = {SFCS-94},
+  title         = {Algorithms for quantum computation: discrete logarithms and factoring},
+  url           = {http://dx.doi.org/10.1109/SFCS.1994.365700},
+  doi           = {10.1109/sfcs.1994.365700},
+  booktitle     = {Proceedings 35th Annual Symposium on Foundations of Computer Science},
+  publisher     = {IEEE Comput. Soc. Press},
+  author        = {Shor,  P.W.},
+  pages         = {124–134},
+  collection    = {SFCS-94}
+}
