--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -339,6 +339,7 @@ Finally, we are ready to prove the correctness of the quantum teleportation circ
 \end{equation*}
 where the notation $\ket{00}_{12}$ represents for example that we are considering $q_1$ and $q_2$'s parts of states, respectively. From now on, we will omit the $\otimes$ symbol --- as for the \curlyquotes{normal} product. The next step is to apply the CNOT on $q_0$ and $q_1$, therefore the quantum state of the system becomes the following: $$\dfrac{1}{\sqrt 2}\sbk{\alpha \ket{0}_{0} (\ket{00}_{12} + \ket{11}_{12}) + \beta \ket{1}_{0} (\ket{10}_{12} + \ket{01}_{12})}$$ Next, we have to apply the Hadamard gate on $q_0$, which turns the quantum state into the following
 \begin{equation*}
+    \hspace{-1cm}
 	\begin{split}
 		  & \dfrac{1}{\sqrt 2} \sbk{
 			\alpha \dfrac{1}{\sqrt 2} ( \ket{0}_{0} + \ket{1}_{0} ) ( \ket{00}_{12} + \ket{11}_{12} )
@@ -361,7 +362,7 @@ where the notation $\ket{00}_{12}$ represents for example that we are considerin
 		}
 	\end{split}
 \end{equation*}
-Finally, Alice will perform the measurement on $q_0$ and $q_1$, and what will happen is that the \tit{whole} quantum state of the quantum circuit will collapse as follows: $$\soe{ll}{\ket{00}_{01} \otimes \ket \psi_2 & @ \ \tfrac{1}{4} \\ \ket{01}_{01} \otimes X \ket \psi_2 & @ \ \tfrac{1}{4} \\ \ket{10}_{01} \otimes Z \ket \psi_2 & @ \ \tfrac{1}{4} \\ \ket{11}_{01} \otimes XZ \ket \psi_2 & @ \ \tfrac{1}{4}}$$ Note that to perform the measurement operation on just $q_0$ and $q_1$ we would need some mathematical tools that we will encounter in the next chapters, therefore we will only show the probabilities of the outcomes as presented above. In fact, fom this table we can easily explain the last part of the quantum teleportation circuit, i.e. Bob's part, as shown below.
+Finally, Alice will perform the measurement on $q_0$ and $q_1$, and what will happen is that the \tit{whole} quantum state of the quantum circuit will collapse as follows: $$\soe{ll}{\ket{00}_{01} \otimes \ket \psi_2 & @ \ \tfrac{1}{4} \\ \ket{01}_{01} \otimes X \ket \psi_2 & @ \ \tfrac{1}{4} \\ \ket{10}_{01} \otimes Z \ket \psi_2 & @ \ \tfrac{1}{4} \\ \ket{11}_{01} \otimes XZ \ket \psi_2 & @ \ \tfrac{1}{4}}$$ In fact, fom this table we can easily explain the last part of the quantum teleportation circuit, i.e. Bob's part, as shown below.
 
 \begin{center}
 	\begin{tabular}{c|c|c}
@@ -880,7 +881,7 @@ In the end, this proves that if $f(0) = f(1)$, $q_0$ will collapse to $\ket 0$, 
 
 Even though Deutsch's algorithm is quite interesting and offers advantages that classical computation cannot achieve, still it seems like it wouldn't be very usefult in practice. In fact, usually we are interested in the \tit{values} of $f(0)$ and $f(1)$, and as we already mentioned quantum mechanics will not allow us to compute both the values at the same time --- meaning that even if we use Deutsch's algorithm to now whether $f(0)$ is equal to $f(1)$ or not, we would still need to compute at least one between $f(0)$ and $f(1)$ in order to know both values.
 
-This is because, in reality, the algorithm that we are using is only solving a particular case of a more complex problem. In fact, a couple of years later \textcite{dj} realized that if we use $q_1 = \ket 1$ and $q_0 = \ket{0^n}$ (i.e. we use $n$ qubits set to $\ket 0$) this algorithm is actually able to tell \tbf{constant} and \tbf{balanced} functions apart.
+This is because, in reality, the algorithm that we are using is only solving a particular case of a more complex problem. In fact, a couple of years later \textcite{dj} realized that if we use $q_1 = \ket 1$ and $q_0 = \ket{0}^{\otimes n}$ (i.e. we use $n$ qubits set to $\ket 0$) this algorithm is actually able to tell \tbf{constant} and \tbf{balanced} functions apart.
 
 \begin{frameddefn}{Constant function}
     A Boolean function $\func{f}{\{0, 1\}^n}{\{0,1\}}$ is said to be \tbf{constant} if $$\exists b \in \{0, 1\} \quad \forall x \in \{0, 1\}^n \quad f(x) = b$$
@@ -897,7 +898,7 @@ We observe that a Boolean function can be neither constant nor balanced, so this
 Moreover, this problem actually shows the power of quantum parallelism more evidently: with a classical computation, to solve this decision problem we would need at most $$2^{n - 1} + 1 = O(2^n)$$ queries to $f$, instead our quantum computation still only requires \und{one} evaluation of $f$ to solve the problem.
 
 \begin{framedalgo}{Deutsch-Josza algorithm}
-    Given a Boolean function $f$ and $n + 1$ qubits, the algorithm returns $\ket{0^n}$ if $f$ is constant, $\ket 1$ otherwise. \\
+    Given a Boolean function $f$ and $n + 1$ qubits, the algorithm returns $\ket{0}^{\otimes n}$ if $f$ is constant, $\ket 1$ otherwise. \\
     \hrule
 
     \quad
@@ -912,7 +913,7 @@ Moreover, this problem actually shows the power of quantum parallelism more evid
     \end{algorithmic}
 \end{framedalgo}
 
-Note that in this algorithm $q_0$ are actually $n$ qubits, thus $q_0$ is initially set to $\ket{0^n}$. Before proving the correctness of this general version of the algorithm, let us first take a look at the quantum circuit that defines it.
+Note that in this algorithm $q_0$ are actually $n$ qubits, thus $q_0$ is initially set to $\ket{0}^{\otimes n}$. Before proving the correctness of this general version of the algorithm, let us first take a look at the quantum circuit that defines it.
 
 TODO \todo{drawing}
 
@@ -945,9 +946,9 @@ Finally, we are ready to prove the correctness of the algorithm.
 \begin{equation*}
     \begin{alignedat}{2}
         & q_0 \otimes q_1 & \\ 
-        = & \ket{0^n} \otimes \ket 0 & \\ 
-        \xrightarrow{X(q_1)} & \ket{0^n} \otimes \ket 1 & \\ 
-        \xrightarrow{H^{\otimes n}(q_0, q_1)} & H^{\otimes n} \ket{0^n} \otimes H \ket 1 & \\ 
+        = & \ket{0}^{\otimes n} \otimes \ket 0 & \\ 
+        \xrightarrow{X(q_1)} & \ket{0}^{\otimes n} \otimes \ket 1 & \\ 
+        \xrightarrow{H^{\otimes n}(q_0, q_1)} & H^{\otimes n} \ket{0}^{\otimes n} \otimes H \ket 1 & \\ 
         = & \dfrac{1}{\sqrt 2^n} \sum_{a \in \B^n}{(-1)^{0^n \cdot a} \ket a} \otimes \ket - & \quad (\mbox{by Claim 2}) \\ 
         = & \dfrac{1}{\sqrt 2^n} \sum_{a \in \B^n}{\ket a} \otimes \ket -  & \\ 
         = & \dfrac{1}{\sqrt 2^n } \sum_{a \in \B^n}{(\ket a \otimes \ket - )} & \\ 
@@ -962,7 +963,7 @@ Finally, we are ready to prove the correctness of the algorithm.
     \end{alignedat}
 \end{equation*}
 
-Now note that this state describes the superposition of the system, but the next step of the algorithm will only measure $q_0$, therefore we can ignore $\ket -_1$ and just focus on the amplitudes of $q_0$. Then, by calling $$\forall b \in \B^n \quad \alpha_b := \dfrac{1}{2^n} \sum_{a \in \B^n}{(-1)^{f(a) + a \cdot b}}$$ we can rewrite $q_0$ as follows $$q_0 = \sum_{b \in \B^n}{\alpha_b \ket b}$$ Finally, since we want to determine the probability that $q_0$ collapses into the state $\ket{0^n}$ specifically, we can easily evaluate the associated amplitude of the latter, i.e. $$\alpha_{0^n} = \dfrac{1}{2^n}\sum_{a \in \B^n}{(-1)^{f(a)+ a \cdot 0^n}} = \dfrac{1}{2^n} \sum_{a \in \B^n}{(-1)^{f(a)}}$$ From this, we can easily conclude that:
+Now note that this state describes the superposition of the system, but the next step of the algorithm will only measure $q_0$, therefore we can ignore $\ket -_1$ and just focus on the amplitudes of $q_0$. Then, by calling $$\forall b \in \B^n \quad \alpha_b := \dfrac{1}{2^n} \sum_{a \in \B^n}{(-1)^{f(a) + a \cdot b}}$$ we can rewrite $q_0$ as follows $$q_0 = \sum_{b \in \B^n}{\alpha_b \ket b}$$ Finally, since we want to determine the probability that $q_0$ collapses into the state $\ket{0}^{\otimes n}$ specifically, we can easily evaluate the associated amplitude of the latter, i.e. $$\alpha_{0^n} = \dfrac{1}{2^n}\sum_{a \in \B^n}{(-1)^{f(a)+ a \cdot 0^n}} = \dfrac{1}{2^n} \sum_{a \in \B^n}{(-1)^{f(a)}}$$ From this, we can easily conclude that:
 
 \begin{itemize}
     \item if $f$ is constant, then $$\alpha_{0^n} = \dfrac{1}{2^n} \sum_{a \in \B^n}{(-1)^{f(a)}} = \dfrac{1}{2^n} \cdot 2^n \cdot (-1)^{b} = (-1)^b$$ where $b \in \B$, meaning that it is guaranteed that $q_0$ will collapse to $0^n$
@@ -1069,8 +1070,8 @@ We can finally describe Grover's algorithm in detail. First, we see that
 \begin{equation*}
     \begin{split}
         & q_0 \\ 
-        = & \ket{0^n} \\ 
-        \xrightarrow{H^{\otimes(q_0)}} & \dfrac{1}{\sqrt{2^n}}\sum_{x \in \B^n}{(-1)^{0^n \cdot x} \ket x} \\ 
+        = & \ket{0}^{\otimes n} \\ 
+        \xrightarrow{H^{\otimes n}(q_0)} & \dfrac{1}{\sqrt{2^n}}\sum_{x \in \B^n}{(-1)^{0^n \cdot x} \ket x} \\ 
         = & \dfrac{1}{\sqrt N} \sum_{x \in \B^n}{\ket x} \\ 
         = & \ket s
     \end{split}
@@ -1251,15 +1252,17 @@ So, what do we do now? In 2014 \textcite{yoder} proposed a fixed-point quantum s
 
 \chapter{Shor's algorithm}
 
-TODO \todo{small intro}
+\tbf{Shor's algorithm} is a quantum algorithm for finding the \tit{prime factors of an integer}, developed in 1994 by the American mathematician \textcite{shor}. It is one of the few known quantum algorithms with compelling potential applications and strong evidence of \tbf{superpolynomial} speedup compared to best known classical (non-quantum) algorithm. It is one of the most famous algorithms in the field, and it sparked a lot of interest in recent years due to the implications of its theoretical speedup.
 
-Before explaining the next algorithm that we are going to describe, we first need to present a very useful tool that is widely employed in various areas of computer science and mathematics, such as integer multiplication, signal processing (e.g. speech recognition, audio compression) and much more.
+Shor's algorithm utilizes a lot of mathematical tools \todo{da finire}
+
+Before explaining Shor's algorithm, we first need to present a very useful tool that is widely employed in various areas of computer science and mathematics, such as integer multiplication, signal processing (e.g. speech recognition, audio compression) and much more.
 
 \section{A recap on the Discrete Fourier Transform}
 
 The \tbf{Discrete Fourier Transform (DFT)} is a very powerful tool used in many applications and probably most widely known for its use in signal processing. Indeed, the Fourier transform is used to transform a signal defined on the \tit{time domain} into its equivalent in the \tit{frequency domain}. We will briefly explore the most important concepts that define the DFT to have a better understanding in order to the progress with its quantum counterpart.
 
-First, what is the \curlyquotes{time domain}? When we sample a signal, we usually sample such signal through some finite amount of time, and we discretize such time interval --- this is why we consider the Discrete Fourier transform. What we are interested in is to transform such signal into the \curlyquotes{frequency domain}, which essentially means to understand what frequencies of sinusoids contribute to our signal and in which percentage. To do this, we will use some concepts of Linear Algebra. Say that the signal we sampled is discretized into $N$ parts, thus our sample lives in the $\R^N$ space --- it is nothing but a vector of $N$ complex values which describe the signal at each timestep. When we say \curlyquotes{time domain}, what we mean is basically this exact vector, i.e. expressed in the canonical orthonormal basis $$e_0 = \rmat{1 \\ 0 \\ \vdots \\ 0 } \quad e_1 = \rmat{0 \\ 1 \\ \vdots \\ 0} \quad \ldots \quad e_{N - 1} = \rmat{0 \\ \vdots \\ 0 \\ 1}$$ (we will start counting at 0 for convenience). In other words, if our signal is defined by some vector $$\mathbf x = \rmat{t_0 \\ t_1 \\ \vdots \\ t_{N - 1}}$$ it holds that $$\mathbf x = \sum_{n = 0}^{N - 1}{t_n e_n}$$
+First, what is the \curlyquotes{time domain}? When we sample a signal, we usually sample such signal through some finite amount of time, and we discretize such time interval --- this is why we consider the Discrete Fourier transform. What we are interested in is to transform such signal into the \curlyquotes{frequency domain}, which essentially means to understand what frequencies of sinusoids contribute to our signal and in which percentage. To do this, we will use some concepts of Linear Algebra. Say that the signal we sampled is discretized into $N$ parts, thus our sample lives in the $\R^N$ space --- it is nothing but a vector of $N$ complex values which describe the signal at each timestep. When we say \curlyquotes{time domain}, what we mean is basically this exact vector, i.e. expressed in the canonical orthonormal basis $$e_0 = \rmat{1 \\ 0 \\ \vdots \\ 0 } \quad e_1 = \rmat{0 \\ 1 \\ \vdots \\ 0} \quad \ldots \quad e_{N - 1} = \rmat{0 \\ \vdots \\ 0 \\ 1}$$ (we will start counting at 0 for convenience sake). In other words, if our signal is defined by some vector $$\mathbf x = \rmat{t_0 \\ t_1 \\ \vdots \\ t_{N - 1}}$$ it holds that $$\mathbf x = \sum_{n = 0}^{N - 1}{t_n e_n}$$
 
 Then, what is the \curlyquotes{frequency domain}? We need some preliminary observations to describe it. Our goal is to take into account the frequencies that define our signal, therefore we need to move into a space in which frequencies are \curlyquotes{first-class citizens}. The idea is to use each possible sinusoid by varying the frequency, add up their contributions, and weight the latter in the precise way that allows us to reconstruct our original signal. Let us fix a component $n \in [0, N - 1]$, and first consider only cosinusoids, for instance $$\cos(2 \pi \cdot 0 \cdot n) \quad \cos(2 \pi \cdot 1 \cdot n) \quad \cos(2 \pi \cdot 2 \cdot n) \quad \ldots \quad \cos(2 \pi \cdot (N - 1) \cdot n)$$ Basically, we are trying to construct a basis built on each possible frequency $f$ by obtaining a basis vector $\cos(2 \pi \cdot f \cdot n)$. Moreover, we will consider $\cos (2 \pi m n / N)$ for $m \in [0, N - 1]$ since it can be shown that the number of possible frequencies that can be represented on a $N$-sized time window is exactly $N$, and to scale the frequency accordingly we just need to divide $m$ over $N$, the size of the sample.
 
@@ -1327,7 +1330,7 @@ Then, can't we just use the DFT matrix in quantum computations whenever we need 
 
 We observe that the QFT matrix has positive exponents, which is just a convention employed in quantum computing. Therefore, we get the following matrix: $$\mbox{QFT} := \rmat{1 & 1 & 1 & \cdots & 1 \\ 1 & \omega & \omega^2 & \cdots & \omega^{N - 1} \\ 1 & \omega^2 & \omega^4 & \cdots & \omega^{2(N - 1)} \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ 1 & \omega^{N - 1} & \omega^{2(N - 1)} & \cdots & \omega^{(N - 1)^2}}$$ In particular, for any $\ket x$ basis state, the quantum Fourier transform can also be expressed as follows: $$\mbox{QFT} \ket x = \dfrac{1}{\sqrt N} \sum_{k = 0}^{N - 1}e^{+2 \pi i x k/ N} \ket k$$ which directly implies that we can rewrite the QFT matrix as follows $$\mbox{QFT} = \sum_{j = 0}^{N - 1}{\rbk{\dfrac{1}{\sqrt N} \sum_{k = 0}^{N - 1}{e^{2 \pi i j k /N} \ket k}} \bra j }$$ thanks to \cref{U constr}.
 
-\begin{framedprop}{}
+\begin{framedprop}[label={qft unitary}]{}
     The QFT operator is a unitary, and in particular $$\mbox{QFT}^\dag  = \sum_{j = 0}^{N - 1}{\ket j \rbk{\dfrac{1}{\sqrt N} \sum_{k = 0}^{N  -1}{e^{-2 \pi i j k /N} \bra k}}}$$
 \end{framedprop}
 
@@ -1397,10 +1400,16 @@ The last semplitifcation derives immediately from the fact that $e^{2 \pi i \the
         = & \dfrac{1}{\sqrt N} \sum_{k = 0}^{N - 1}{\rbk{\exp(2 \pi i k_n0.x_1 \ldots x_n  ) \cdot \exp \rbk{ 2 \pi i \sum_{m = 2}^{n}{k_{n - m + 1} \cdot 0.x_m\ldots x_n} }}\ket k } \\ 
         = & \dfrac{1}{\sqrt N} \sum_{k = 0}^{N - 1}{\exp \rbk{2 \pi i \sum_{m = 1}^n{k_{n - m + 1} \cdot 0. x_m \ldots x_n}}\ket k } \\ 
         = & \dfrac{1}{\sqrt N} \sum_{k = 0}^{N - 1}{\prod_{m = 1}^n{\exp \rbk{2 \pi i k_{n - m + 1} \cdot 0.x_m \ldots x_n}} \ket k} \\ 
-        = & \dfrac{1}{\sqrt N} \bigotimes_{m = 1}^n{\rbk{\ket 0 + e^{2\pi i 0.x_m \ldots x_n} \ket 1}} \\ 
     \end{split}
 \end{equation*}
-Finally, the QFT written in this form can be actually implemented in a quantum circuit. \todo{da finire sonostufo}
+If we look closely, this sum of products as an interesting property:
+
+\begin{itemize}
+    \item $m = 1 \implies k_{n- m + 1} = k_{n - 1 + 1} = k_n$
+    \item $m = n \implies k_{n - m + 1} = k_{n -n +1} = k_1$
+\end{itemize}
+
+implying that it can be rewritten as follows $$\dfrac{1}{\sqrt N}\sum_{k = 0}^{N - 1}{\rbk{e^{2 \pi i k_n \cdot 0.x_1 \ldots x_n} \cdot \ldots \cdot e^{2 \pi i k_1 \cdot 0.x_n}}}$$ In other words the bits of $k$ are \tit{indexing} which exponentials to use in the $k$-th coefficient of the sum. This means that we can rewrite the last step as follows: $$\mbox{QFT} \ket x =  \dfrac{1}{\sqrt N} \bigotimes_{m = 1}^n{\rbk{\ket 0 + e^{2\pi i 0.x_m \ldots x_n} \ket 1}}$$ Finally, the QFT written in this form can be actually implemented in a quantum circuit. \todo{da finire sonostufo}
 
 \section{Quantum Phase Estimation}
 
@@ -1444,7 +1453,7 @@ Notice what happened here: $\ket 0$ and $\ket 1$ are parts of the first input, a
 
 \centeredimage[The Quantum Phase Estimation circuit.]{0.6}{../assets/qpe.png}
 
-The circuit is composed of the following elements:
+The circuit is composed of the following elements: \todo{fixa l'immagine che la misurazione non va bene scritta cosi}
 
 \begin{itemize}
     \item the first are $t > 0$ qubits $\ket{0^t}$ to which we apply $H^{\otimes t}$ at the beginning of the algorithm, which means now each state is set to $\ket +$
@@ -1453,28 +1462,55 @@ The circuit is composed of the following elements:
     \item at the end we compute $\mbox{QFT}^\dag$ to the first $t$ registers
 \end{itemize}
 
-The interesting part of this circuit is that the last register remains unchanged throughout the whole computation, set precisely to $\ket u$, for the reason we described earlier. In fact, what happens is that what we are actually changing are the first $t$ qubits which will be chaned according to the $k$-th controlled gate we are using. Therefore, at the end the global state of the circuit (without considering $\ket u$) will be $$\dfrac{1}{\sqrt 2^n} \bigotimes_{m = 1}^{t}{(\ket 0 + e^{2 \pi i 2^{m - 1}} \ket 1)}$$ Notice how we indexed the tensor product.
-
-Furthermore, we obseve that $\varphi \in [0, 1)$, because as we already metioned there is no need to consider the integral part of the phases. Thus, suppose that $\varphi$ can be written through $t$ bits $x_1, \ldots, x_t \in \B$ such that $$\varphi = 0.x_1 \ldots x_t$$ This implies that
+The interesting part of this circuit is that the last register remains unchanged throughout the whole computation, set precisely to $\ket u$, for the reason we described earlier. In fact, what happens is that what we are actually changing are the first $t$ qubits which will be chaned according to the $k$-th controlled gate we are using. Therefore, if we compute what happens through the QPE circuit we get the following --- we will refer to the first $t$ registers as $q_0, \ldots, q_{t - 1}$:
 \begin{equation*}
+    \hspace{-1cm}
     \begin{split}
-        2^{m - 1} \cdot \varphi & = 2^{m - 1} \cdot 0.x_1 \ldots x_t \\ 
-                                & = x_1 \ldots x_{m - 1}. x_m \ldots x_t
+        & \ket{q_0 \cdots q_{t - 1}} \otimes \ket u \\ 
+        = & \ket{0}^{\otimes t} \otimes \ket u \\ 
+        \xrightarrow{H(q_0)} & H(\ket{0}_{q_0}) \otimes \ket{0}^{\otimes t - 1} \otimes \ket u \\ 
+        = & \ket +_{q_0} \otimes \ket{0}^{\otimes t - 1} \otimes \ket u \\ 
+        = & \ket +_{q_0} \otimes \ket u \otimes \ket{0}^{\otimes t - 1} \\ 
+        \xrightarrow{\mathrm{C}\mbox{-}U^{2^0}(q_0, \ket u)} & \mbox{C-}U^{2^0}(\ket + \otimes \ket u) \otimes \ket{0}^{\otimes t - 1} \\ 
+ & \dfrac{1}{\sqrt 2}(\ket{0}_{q_0} + e^{2 \pi i 2^0 \varphi} \ket 1_{q_0}) \otimes \ket u \otimes \ket{0}^{\otimes t - 1} \\ 
+        = & \dfrac{1}{\sqrt 2}(\ket{0}_{q_0} + e^{2 \pi i 2^0 \varphi} \ket 1_{q_0}) \otimes \ket{0}^{\otimes t - 1} \otimes \ket u \\ 
+        = & \dfrac{1}{\sqrt 2}(\ket{0}_{q_0} \otimes \ket{0}^{\otimes t - 1}  + e^{2 \pi i 2^0 \varphi} \ket{1}_{q_0} \otimes \ket{0}^{\otimes t - 1}) \otimes \ket u \\ 
+        \xrightarrow{H(q_1)} & \dfrac{1}{\sqrt 2}(\ket 0_{q_0} \otimes H(\ket{0}_{q_1}) \otimes \ket{0}^{\otimes t - 2}  + e^{2 \pi i 2^0 \varphi} \ket 1_{q_0} \otimes H(q_1) \otimes \ket{0}^{\otimes t - 2}) \otimes \ket u \\ 
+        = & \dfrac{1}{2} \rbk{\ket{00}_{q_0 q_1} + \ket{01}_{q_0 q_1} + e^{2 \pi i 2^0 \varphi}\ket{10}_{q_0 q_1} + e^{2 \pi i 2^0 \varphi} \ket {11}_{q_0 q_1}} \otimes \ket{0}^{\otimes t - 1} \otimes \ket u \\ 
+        \xrightarrow{\mathrm{C}\mbox{-}U^{2^1}(q_1, \ket u)} & \dfrac{1}{2}\rbk {\ket{00}_{q_0 q_ 1} + e^{2 \pi i 2^1 \varphi} \ket{01}_{q_0 q_1} + e^{2 \pi i 2^0 \varphi} \ket{10}_{q_0 q_1} + e^{2 \pi i (2^0 + 2^1) \varphi} \ket{11}_{q_0 q_1}} \otimes \ket{0}^{\otimes t - 1} \otimes \ket u \\ 
+        \xrightarrow{\ldots} & \ldots \\ 
+        = & \dfrac{1}{\sqrt {2^t}} \sum_{k = 0}^{2^t - 1}{\prod_{m = 1}^{t}{e^{2 \pi i k_{t - m + 1} \cdot 2 ^{m - 1} \varphi} \ket k}} \otimes \ket u \\ 
+        = & \dfrac{1}{\sqrt {2^t}} \bigotimes_{m = 1}^{t} {\rbk{\ket 0 + e^{2 \pi i 2^{m - 1} \varphi} \ket 1}} \otimes \ket u \\ 
     \end{split}
 \end{equation*}
-Thus, since this is the exponent of $e^{2 \pi i}$, we already know that $$\exp(2 \pi i x_1 \ldots x_{m - 1} . x_m \ldots x_t) = \exp(2 \pi i 0. x_m \ldots x_t)$$ therefore the ternsor product can be rewritten as $$\dfrac{1}{\sqrt 2^n} \bigotimes_{m = 1}^{t}{(\ket 0 + e^{2 \pi i 0.x_m \ldots x_t} \ket 1)}$$ Very elegantly, this is exactly $\mbox{QFT} \ket x$ we computed in the previous section! Finally, if we place the inverse QFT --- namely $\mbox{QFT}^\dag$ --- at the end of the circuit we retrieve $\ket x$ itself, which is also the entire state of the system at this point (without considering $\ket u$). This means that if we measure each register at the end of the circuit we retrieve the bits of $x \in \B^n$ --- i.e. the bits that describe $\varphi$ --- with probability 1. In the end, we recovered the phase $\varphi$ of the eigenvalue associated to $\ket u$ with probability 1.
+Furthermore, we obseve that $\varphi \in [0, 1)$, because as we already metioned there is no need to consider the integral part of the phases. Thus, suppose that $\varphi$ can be written through $t$ bits $\varphi_1, \ldots, \varphi_t \in \B$ such that $$\varphi = 0.\varphi_1 \ldots \varphi_t$$ This implies that
+\begin{equation*}
+    \begin{split}
+        2^{m - 1} \cdot \varphi & = 2^{m - 1} \cdot 0.\varphi_1 \ldots \varphi_t \\ 
+                                & = \varphi_1 \ldots \varphi_{m - 1}. \varphi_m \ldots \varphi_t \\ 
+    \end{split}
+\end{equation*}
+Thus, since this is the exponent of $e^{2 \pi i}$, we already know that $$\exp(2 \pi i \varphi_1 \ldots \varphi_{m - 1} . \varphi_m \ldots \varphi_t) = \exp(2 \pi i 0. \varphi_m \ldots \varphi_t)$$ therefore the ternsor product can be rewritten as $$\dfrac{1}{\sqrt{2^t}} \bigotimes_{m = 1}^{t}{(\ket 0 + e^{2 \pi i 0.\varphi_m \ldots \varphi_t} \ket 1)}$$ Very elegantly, this is exactly $\mbox{QFT}_t \ket \varphi$ we computed in the previous section (only applied in a $t$-dimensional space). Finally, if we place the inverse QFT --- namely $\mbox{QFT}_t^\dag$ --- at the end of the circuit we retrieve $\ket x$ itself, which is also the entire state of the system at this point (without considering $\ket u$). This means that if we measure each register at the end of the circuit we retrieve the bits of $\varphi_i \in \B^t$ --- i.e. the bits that describe $\varphi$ --- with probability 1. In the end, we recovered the phase $\varphi$ of the eigenvalue associated to $\ket u$ with probability 1. \todo{scrivere QPE come alg}
 
 As a final note, what if $\varphi$ cannot be expressed in exactly $t$ bits? It can be shown that $\varphi$ can be estimated with $n$ bits of precision through a QPE circuit composed of $n + \ceil{\log(2 + \tfrac{1}{2 \varepsilon})}$ qubits with a success probability at least $1 - \varepsilon$, for some $\varepsilon > 0$.
 
-\section{Shor's algorithm}
+\section{Order-finding problem}
 
-\begin{frameddefn}{Order}
-    Given $N \in \N$, and an element $x \in [0, N - 1]$, the \tbf{order} of $x$ modulo $N$ is the least integer $r$ such that $$x^r \equiv 1 \bmod N$$
+The last ingredient that we need for Shor's algorithm is the \tbf{order-finding} algorithm. We recall the following property of number theory.
+
+\begin{framedprop}{Euclidean division}
+    Given some $p \in \N_{> 0}$, for any $n \in \N$ there exists unique integers $q, r \in \Z$ such that $0 \le r < p$ and $$n = p \cdot q + r$$
+\end{framedprop}
+
+This is the usual division with remainder, which defines modular arithmetic, for instance $$31 = 4 \cdot 7 + 3$$ Indeed, with equivalence classes we would write that $$31 \equiv 3 \bmod 7$$
+
+\begin{frameddefn}{Order of a number}
+    Given a number $N \in \N$, for any $x \in \Z$ the \tbf{order} of $x$ modulo $N$ is the least integer $r$ such that $$x^r \equiv 1 \bmod N$$
 \end{frameddefn}
 
-For instance, the order of 4 modulo 7 is 3, because $$4^3 = 64 = 9 \cdot 7 + 1 \implies 4^3 \equiv 1 \bmod 7$$
+For instance, the order of 4 modulo 7 is 3, because $$4^3 = 64 = 9 \cdot 7 + 1 \implies 4^3 \equiv 1 \bmod 7$$ We observe that throughout our discussion $N$ is \tit{not necessarily} a power of 2 as we used to assume in previous sections, however the symbol $N$ is conventionally used in this context.
 
-TODO \todo{fare ordine + introduzione}
+Given a number $N$, and a number $x < N$ that is coprime with $N$, can we compute its order modulo $N$? This is the so called \tbf{order-finding problem}, and currently there is no classical algorithm able to solve it in polynomial time. Let's see what quantum computation can achieve.
 
 Consider the following unitary operator $U_x$ that computes as follows: $$\forall y \in \{0, 1\}^k \quad U_x \ket y = \soe{ll}{\ket{xy \bmod N} & y < N \\ \ket y & y \ge N}$$ To derive the complete operator $U_x$ we just follow \cref{U constr}:
 \begin{equation*}
@@ -1526,14 +1562,14 @@ We will not replace $U_x$ inside the first sum for now in order to prove that $U
     Now, we need to prove the opposite product \todo{da fare}
 \end{proof}
 
-TODO \todo{conjunction}
+We did not provide any reason to why we defined the operator $U_x$ as such, but before giving a geometrical intuition consider the following proposition.
 
-\begin{framedprop}{}
+\begin{framedthm}{}
     Given $N \in \N$, and $x \in [0, N - 1]$, if $r$ is the order of $x$ modulo $N$, it holds that $$\forall s \in [0, r - 1] \quad \ket{u_s} = \dfrac{1}{\sqrt r} \sum_{k = 0}^{r - 1}{e^{-2 \pi i sk/r} \ket{x^k \bmod N}}$$ is an eigenvector of $U_x$.
-\end{framedprop}
+\end{framedthm}
 
 \begin{proof}
-    Fix $s \in [0, r - 1]$; to prove that $\ket{u_s}$ is an eigenvector of $U_x$ we need to show that there exists some phase $\varphi$ such that $$U_x \ket{u_s} = e^{2 \pi i \varphi} \ket{u_s}$$ because of \cref{spectral thm}. Hence, we get that
+    Fix $s \in [0, r - 1]$; to prove that $\ket{u_s}$ is an eigenvector of $U_x$ we need to show that there exists some phase $\varphi_s$ such that $$U_x \ket{u_s} = e^{2 \pi i \varphi_s} \ket{u_s}$$ because of \cref{spectral thm}. Hence, we get that
     \begin{equation*}
         \hspace{-1cm}
         \begin{alignedat}{2}
@@ -1551,10 +1587,82 @@ TODO \todo{conjunction}
                           & = e^{2 \pi i s/r}  \ket {u_s} \\
         \end{alignedat}
     \end{equation*}
-    Therefore, we conclude that $\varphi = s/r$.
+    Therefore, we conclude that $\varphi_s = s/r$.
 \end{proof}
 
-TODO \todo{da finire}
+TODO \todo{intuizione geometrica}
+
+What happenns if the input of $U_x$ is $\ket{x^0}$? By definition of our problem $x < N$, therefore $$U_x \ket{x^0} = \ket{x \cdot x^0 \bmod N} = \ket{x^1 \bmod N}$$ Indeed in general it's easy to see that $$U_x \ket{x^k} = \ket{x^{k + 1} \bmod N}$$ In other words $U_x$ is cycling through $x$'s powers, which also implies that when $k = r - 1$ we get that $$U_x \ket{x^{r - 1}} = \ket{x^r \bmod N} = \ket{1 \bmod N}$$ since $r$ is the order of $x$ modulo $N$. Moreover, as we already know these are basis states so they are both normalized and orthogonal to each other, thus the powers $x$ form an orthonormal base of the following space $$\mathcal H_r = \mbox{span}\rbk{\ket{x^k \bmod N} \mid k \in [0, r - 1]}$$ which is a restriction of the whole Hilbert space that has exactly $r$ dimensions. Now look again at how the eigenvectors of $U_x$ are defined: $$\forall s \in [0, r - 1] \quad \ket{u_s} = \dfrac{1}{\sqrt r} \sum_{k = 0}^{r - 1}{e^{-2 \pi i sk/r} \ket{x^k \bmod N}}$$ This looks very similar to how we defined $\mbox{QFT} \ket x$: $$\mbox{QFT} \ket x = \dfrac{1}{\sqrt N} \sum_{k = 0}^{N - 1}{e^{2 \pi i x k / N} \ket k}$$ Indeed, it holds that $\ket{u_s}$ is basically $\mbox{QFT} \ket s$ but taken inside $\mathcal H_r$ --- the only difference being the sign of the exponent, ndeed it technically holds that $$\ket{u_s} = \mbox{QFT}_r \ket{- s \bmod r}$$ but as we said the sign of the exponent is just a convention either sign is found in literature, we only need to be consistent with the calculations. \todo{non ho capito che c'entra però}
+
+The most interesting part is that, as proved in the last theorem, for any fixed $s \in [0, N - 1]$ its associated phase $\varphi_s$ is exactly $s/r$, thus if we knew how to prepare the last register of the QPE as $\ket{u_s}$ we could recover its phase, and maybe get closer to know $r$ itself. However, we have two probems with this idea:
+
+\begin{itemize}
+    \item there is really no easy or practical way to prepare the second register to some arbitrary state
+    \item $\ket{u_s}$ actually depends on $r$ itself, which actually is a very big problem on its own
+\end{itemize}
+
+Thankfully, the following property will solve both of these issues at the same time.
+
+\begin{framedprop}{}
+    Given $N \in \N$, and $x \in [0, N - 1]$, if $r$ is the order of $x$ modulo $N$ it holds that $$\dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1} \ket{u_s} = \ket 1$$
+\end{framedprop}
+
+\begin{proof}
+    Through some algebraic manipulation we see that
+    \begin{equation*}
+        \begin{split}
+            \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{\ket{u_s}} & = \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{\rbk{\dfrac{1}{\sqrt r} \sum_{k = 0}^{r - 1}{e^{- 2 \pi i s k / r} \ket {x^k \bmod N}}}} \\ 
+                                                               & = \dfrac{1}{r} \sum_{s, k = 0}^{r - 1}{e^{- 2 \pi i sk/ r} \ket{x^k \bmod N}} \\ 
+                                                               & = \dfrac{1}{r} \sum_{s = 0}^{r - 1}{e^{- 2 \pi i s \cdot 0 / r} \ket{x^0 \bmod N}} + \dfrac{1}{r} \sum_{s = 0, k = 1}^{r - 1}{e^{- 2 \pi i sk/ r} \ket{x^k \bmod N}} \\ 
+                                                               & = \dfrac{1}{r} \sum_{s = 0}^{r - 1}{\ket{1}} + \dfrac{1}{r} \sum_{s = 0, k = 1}^{r - 1}{e^{- 2 \pi i sk/ r} \ket{x^k \bmod N}} \\ 
+                                                               & = \dfrac{1}{r} r \ket 1 + \dfrac{1}{r} \sum_{s = 0, k = 1}^{r - 1}{e^{- 2 \pi i sk/ r} \ket{x^k \bmod N}} \\ 
+                                                               & = \ket 1 + \dfrac{1}{r}\sum_{k = 1}^{r - 1}{\ket{x^k \bmod N} \sum_{s = 0}^{r - 1}{e^{- 2 \pi i sk/r }}} \\ 
+                                                               & = \ket 1 + \dfrac{1}{r}\sum_{k = 1}^{r - 1}{\ket{x^k \bmod N} \sum_{s = 0}^{r - 1}{\rbk{e^{- 2 \pi i k/r}}^s}} \\ 
+        \end{split}
+    \end{equation*}
+    As we did for the proof of \cref{qft unitary}, because of how we split the sums we know that $e^{- 2 \pi i k/ r}$ cannot be 0, but it cannot be 1 either because $k/r$ is not an integer, therefore we get that
+    \begin{equation*}
+        \begin{split}
+            \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{\ket{u_s}} & = \ket 1 + \dfrac{1}{r}\sum_{k = 1}^{r - 1}{\ket{x^k \bmod N} \dfrac{1 - (e^{-2 \pi i k/r})^r}{1 - e^{- 2 \pi i k/r}}} \\ 
+                                                               & = \ket 1 + \dfrac{1}{r}\sum_{k = 1}^{r - 1}{\ket{x^k \bmod N} \dfrac{1 - e^{-2 \pi i k}}{1 - e^{- 2 \pi i k/r}}} \\ 
+                                                               & = \ket 1 + \dfrac{1}{r}\sum_{k = 1}^{r - 1}{\ket{x^k \bmod N} \dfrac{1 - 1}{1 - e^{- 2 \pi i k/r}}} \\ 
+                                                               & = \ket 1
+        \end{split}
+    \end{equation*}
+\end{proof}
+
+Indeed, this property is incredibly useful because we can provide $\ket 1$ to the lower register of the QPE circuit instead of a single eigenvector, in order to compute the same algorithm but to all the eigenvectors \tbf{simultaneously}. We observe that $\ket 1$ is essentially a superposition of all the eigenvectors of $U_x$, which means that when fed to $\mbox{C-}U_x^{2^k}$ as target qubit we don't really get $\ket 1$ back, indeed
+\begin{equation*}
+    \begin{split}
+        \mbox{C-}U_x^{2^k} (\ket{+}_0 \otimes \ket{1}_1) & = \dfrac{1}{\sqrt 2} \rbk{\ket{0}_0 \otimes \ket{1}_1 + \ket{1}_0 \otimes U_x^{2^k} \ket 1_1} \\ 
+                                                         & = \dfrac{1}{\sqrt 2} \rbk{\ket{0}_0 \otimes \ket{1}_1 + \ket{1}_0 \otimes U_x^{2^k} \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{\ket{u_s}_1}} \\ 
+                                                         & = \dfrac{1}{\sqrt 2} \rbk{\ket{0}_0 \otimes \ket{1}_1 + \ket{1}_0 \otimes \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{U_x^{2^k}\ket{u_s}_1}} \\ 
+                                                         & = \dfrac{1}{\sqrt 2} \rbk{\ket{0}_0 \otimes \ket{1}_1 + \ket{1}_0 \otimes \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{e^{2 \pi i 2^k s/r} \ket{u_s}_1}} \\ 
+                                                         & = \dfrac{1}{\sqrt 2} \rbk{\ket{0}_0 \otimes \dfrac{1}{\sqrt r}\sum_{s = 0}^{r - 1}{\ket{u_s}_1} + \ket{1}_0 \otimes \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{e^{2 \pi i 2^k s/r} \ket{u_s}_1}} \\ 
+                                                         & = \dfrac{1}{\sqrt{2r}} \sum_{s = 0}^{r - 1}{\rbk{\ket{0}_0 + e^{2 \pi i 2^k s/r} \ket{1}_0} \otimes \ket{u_s}_1} \\
+    \end{split}
+\end{equation*}
+Nevetheless, notice what happened here: we engangled the control qubit with the target qubit, such that now the target \tit{picked up the phase} $e^{2 \pi i 2^k s/r}$ --- exactly as the standard QPE --- and we are still preserving the superposition of eigenvectors $\ket{u_s}$. This is exactly what we need, however it also means that the result at the end of the circuit is not very straightforward: in standard QPE the resulting state is just the tensor product of the single control qubits because they are independent from each other, but here we are entangling all the control and the target qubits together at each application of $\mbox{C-}U_x^{2^k}$. Hence, we need to compute what happens step by step: \todo{fallo}
+\begin{equation*}
+    \begin{split}
+        & TODO \\ 
+        = & \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{\dfrac{1}{\sqrt{2^t}} \bigotimes_{m = 1}^{t}{\rbk{\ket 0 + e^{2 \pi i 2^{m - 1} s/r} \ket 1}} \otimes \ket{u_s}} \\  
+        = & \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{\dfrac{1}{\sqrt{2^t}} \bigotimes_{m = 1}^{t}{\rbk{\ket 0 + e^{2 \pi i 0.\varphi_{s_m} \ldots \varphi_{s_t}} \ket 1}} \otimes \ket{u_s}} \\ 
+        = & \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{\mbox{QFT}_t \ket{\varphi_s}_{q_0 \cdots q_{t - 1}} \otimes \ket{u_s}} \\ 
+        \xrightarrow{\mathrm{QFT}_t^\dag (\ket{q_0 \cdots q_{t - 1}})} & \dfrac{1}{\sqrt r} \sum_{s = 0}^{r - 1}{\ket{\varphi_s} \otimes \ket{u_s}} \\ 
+    \end{split}
+\end{equation*}
+assuming that $\varphi_s = s/r$ can be written through $t$ bits. This entangled quantum state is exactly what we want, because now by measuring the first $t$ registers we get that for each $s \in [0, r - 1]$ they will collapse into $\ket{\varphi_s}$ with probability $\tfrac{1}{r}$, and the last register will collapse into $\ket{u-s}$ which is exactly the eigenvector associated to $e^{2 \pi i \varphi_s}$. This proves that we truly computed the phases of all the possible eigenvectors simultaneously.
+
+We are almost done. We now know that we can retrieve $\varphi_s = s/r$ for each $s \in [0, r - 1]$ without even knowing a single eigenvector of $U_x$, but we still don't know $r$, and any value of $s$ depends on $r$ itself, so how do we preoceed?
+
+% \begin{frameddefn}
+% \end{frameddefn}
+
+
+TODO \todo{size of QPE}
+
+TODO \todo{size of Ux gates}
 
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
