--- a/src/references.bib
+++ b/src/references.bib
@@ -141,3 +141,16 @@
   pages         = {124–134},
   collection    = {SFCS-94}
 }
+@article{bb84,
+  title         = {Quantum cryptography: Public key distribution and coin tossing},
+  volume        = {560},
+  issn          = {0304-3975},
+  url           = {http://dx.doi.org/10.1016/j.tcs.2014.05.025},
+  doi           = {10.1016/j.tcs.2014.05.025},
+  journal       = {Theoretical Computer Science},
+  publisher     = {Elsevier BV},
+  author        = {Bennett,  Charles H. and Brassard,  Gilles},
+  year          = {2014},
+  month         = dec,
+  pages         = {7–11}
+}
