fixed qkd + first chapter + a ton of typos

--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -37,6 +37,8 @@
 \usepackage{../../packages/Nyx/nyx-title}
 \usepackage{../../packages/Nyx/nyx-intro}
 
+\usepackage{qcircuit}
+
 %%%%%%%%%%%%%%
 % Title-page %
 %%%%%%%%%%%%%%
