--- a/src/references.bib
+++ b/src/references.bib
@@ -38,7 +38,7 @@
 }
 @book{lecerf,
   title         = {Logique math{\'e}matique: 1. Machines de Turing r{\'e}versibles. R{\'e}cursive insolubilit{\'e} en n epsilon ny de l'{\'e}quation u},
-  author        = {Lecerf, Y. and Communaut{\'e} Europ{\'e}enne de l'{\'e}nergie atomique - Euratom (Bruxelles)},
+  author        = {Lecerf, Y. and Communaut{\'e} Europ{\'e}enne de l'{\'e}nergie atomique - Euratom},
   url           = {https://books.google.it/books?id=e1xjGwAACAAJ},
   year          = {1964},
   publisher     = {Euratom}
