added born rule

--- a/src/references.bib
+++ b/src/references.bib
@@ -154,3 +154,27 @@
   month         = dec,
   pages         = {7–11}
 }
+@article{bell,
+  title         = {On the Einstein Podolsky Rosen paradox},
+  volume        = {1},
+  issn          = {0554-128X},
+  url           = {http://dx.doi.org/10.1103/PhysicsPhysiqueFizika.1.195},
+  doi           = {10.1103/physicsphysiquefizika.1.195},
+  number        = {3},
+  publisher     = {American Physical Society (APS)},
+  author        = {Bell,  J. S.},
+  year          = {1964},
+  month         = nov,
+  pages         = {195–200}
+}
+@book{born,
+  title         = {Quantum Theory for Mathematicians},
+  isbn          = {9781461471165},
+  issn          = {2197-5612},
+  url           = {http://dx.doi.org/10.1007/978-1-4614-7116-5},
+  doi           = {10.1007/978-1-4614-7116-5},
+  journal       = {Graduate Texts in Mathematics},
+  publisher     = {Springer New York},
+  author        = {Hall,  Brian C.},
+  year          = {2013}
+}
