almost done tsirelson

--- a/src/references.bib
+++ b/src/references.bib
@@ -178,3 +178,17 @@
   author        = {Hall,  Brian C.},
   year          = {2013}
 }
+@article{tsirelson,
+  title         = {Quantum generalizations of Bell's inequality},
+  volume        = {4},
+  issn          = {1573-0530},
+  url           = {http://dx.doi.org/10.1007/bf00417500},
+  doi           = {10.1007/bf00417500},
+  number        = {2},
+  journal       = {Letters in Mathematical Physics},
+  publisher     = {Springer Science and Business Media LLC},
+  author        = {Tsirelson,  B. S.},
+  year          = {1980},
+  month         = mar,
+  pages         = {93–100}
+}
