this is starting to look promising

--- a/src/references.bib
+++ b/src/references.bib
@@ -202,3 +202,26 @@
   year          = {1991},
   publisher     = {APS}
 }
+@article{cerezo,
+  doi           = {10.48550/ARXIV.2012.09265},
+  url           = {https://arxiv.org/abs/2012.09265},
+  author        = {Cerezo,  M. and Arrasmith,  Andrew and Babbush,  Ryan and Benjamin,  Simon C. and Endo,  Suguru and Fujii,  Keisuke and McClean,  Jarrod R. and Mitarai,  Kosuke and Yuan,  Xiao and Cincio,  Lukasz and Coles,  Patrick J.},
+  keywords      = {Quantum Physics (quant-ph),  Machine Learning (cs.LG),  Machine Learning (stat.ML),  FOS: Physical sciences,  FOS: Physical sciences,  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title         = {Variational Quantum Algorithms},
+  publisher     = {arXiv},
+  year          = {2020},
+  copyright     = {arXiv.org perpetual,  non-exclusive license}
+}
+@article{peruzzo,
+  title         = {A variational eigenvalue solver on a photonic quantum processor},
+  volume        = {5},
+  issn          = {2041-1723},
+  url           = {http://dx.doi.org/10.1038/ncomms5213},
+  doi           = {10.1038/ncomms5213},
+  number        = {1},
+  journal       = {Nature Communications},
+  publisher     = {Springer Science and Business Media LLC},
+  author        = {Peruzzo,  Alberto and McClean,  Jarrod and Shadbolt,  Peter and Yung,  Man-Hong and Zhou,  Xiao-Qi and Love,  Peter J. and Aspuru-Guzik,  Al\'{a}n and O'Brien,  Jeremy L.},
+  year          = {2014},
+  month         = jul
+}
