--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -100,6 +100,7 @@
 \input{./chapters/3.tex}
 \input{./chapters/4.tex}
 \input{./chapters/5.tex}
+\input{./chapters/qec.tex}
 
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
