completely changed the structure of the chapters

--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -95,11 +95,13 @@
 
 %%%%%%%%%%%%%%%%%%%%%
 
-\input{./chapters/1.tex}
-\input{./chapters/2.tex}
-\input{./chapters/3.tex}
-\input{./chapters/4.tex}
-\input{./chapters/5.tex}
+\input{./chapters/intro.tex}
+\input{./chapters/math.tex}
+\input{./chapters/algos.tex}
+\input{./chapters/qpe.tex}
+\input{./chapters/shor.tex}
+\input{./chapters/grover.tex}
+\input{./chapters/qkd.tex}
 \input{./chapters/qec.tex}
 
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
