--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -12,7 +12,7 @@
 
 \def\coursePrerequisites{TODO}
 
-% \def\book{"My book",\\Author 1, ...}
+\def\book{"Quantum Computation and Quantum Information",\\Michael A. Nielsen, Isaac L. Chuang}
 
 % \def\authorName{Simone Bianco}
 % \def\email{bianco.simone@outlook.it}
@@ -97,6 +97,7 @@
 
 \input{./chapters/intro.tex}
 \input{./chapters/math.tex}
+\input{./chapters/post.tex}
 \input{./chapters/algos.tex}
 \input{./chapters/qpe.tex}
 \input{./chapters/shor.tex}
