--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -104,7 +104,7 @@
 \input{./chapters/grover.tex}
 \input{./chapters/qkd.tex}
 \input{./chapters/qec.tex}
-\input{./chapters/univ.tex}
+\input{./chapters/qc.tex}
 
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
