--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -12,7 +12,7 @@
 
 \def\coursePrerequisites{TODO}
 
-\def\book{"Quantum Computation and Quantum Information",\\Michael A. Nielsen, Isaac L. Chuang}
+\def\book{"Quantum Computation and Quantum Information", Michael A. Nielsen, Isaac L. Chuang}
 
 % \def\authorName{Simone Bianco}
 % \def\email{bianco.simone@outlook.it}
